--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ h1 {
 
 .post-meta {
     display: flex;
+    align-items: center;
 }
 
 .post-meta__icon {
@@ -126,6 +127,6 @@ h1 {
 .cerchio{
     background-color: red;
     text-align: center;
-    padding: 5px 20px;
+    padding: 10px ;
     
 }
